# bitcoin-trading

./: .dockerignore  .gitignore  .tool-versions  Brewfile.lock.json  Dockerfile  Dockerfile.back_testing  Dockerfile.btc_app  Dockerfile.docs  Dockerfile.etl  LICENSE  Makefile  README.md  config.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
back_testing/: README.md  app.py  exception_handlers.py  index.md  install.sh  install_linux.sh  middleware.py  requirements.txt
back_testing/config/: __init__.py  auth.py
back_testing/docs/: config.md  machine_learning.md  patterns.md  routers.md  scanner.md
back_testing/machine_learning/: ml_predict.py
back_testing/patterns/: candlestick.py
back_testing/routers/: testing.py
btc_app/: __init__.py  app.py  exception_handlers.py  index.md  logger.py  middleware.py  robinhood.py
btc_app/api/: auth.py
btc_app/api/routers/: research.py  rh_crypto.py  rh_markets.py  rh_profile.py
btc_app/api/trade_logic/: crypto.py
btc_app/docs/: routers.md  trade_logic.md
btc_app/rh_src/: robinhood.py
docs/: about.md  build.sh  create_diagrams.py  deploy.sh  design.md  getting_started.md  index.md  mkdocs.yml  requirements.txt
docs/extra_documentation/: security.md
etl/: etl.py  index.md  requirements.txt  run.sh
etl/data/: config.py  headlines.py  rh.py  stock_quotes.py  tweets.py
etl/docs/: data.md
scripts/: api-key-generator.sh
